@@ -800,6 +800,9 @@
         name = "Alesis Novik"
     [/entry]
     [entry]
+        name = "André Knispel"
+    [/entry]
+    [entry]
         name = "Andrea Palmatè (afxgroup)"
     [/entry]
     [entry]
