@@ -2,6 +2,7 @@ Version 1.7.15+svn:
  * AI:
    * Fixed bug #14247: Make formula AI behave correctly if the side has only 1
      potential recruit.
+   * Added support for candidate actions written in lua.
  * Campaigns:
    * Legend of Wesmere:
      * Fixed bug #15631: Scenario 3: arrival of Kalenz failed
